Final fix: Injecting JavaFX SDK via Docker